# dumont

./: .gitignore  CHANGELOG.md  NOTICE  README.md  SECURITY.md  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
.githooks/: commit-msg
.github/workflows/: ci.yml  release.yml  test-build.yml
src/: App.test.tsx  App.tsx  fonts.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  deny.toml  linux-desktop.template  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  history.rs  lib.rs  main.rs  menu.rs  pdf.rs  settings.rs  themes.rs
src/assets/: tutorial.md
src/assets/fonts/hack-nerd/: hack-nerd.css
src/components/: AIBubble.test.tsx  AIBubble.tsx  AIPanel.tsx  BacklinksPanel.test.tsx  BacklinksPanel.tsx  CodeEditor.test.tsx  CodeEditor.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ErrorBoundary.tsx  ExportMenu.tsx  FileExplorer.tsx  FindReplaceBar.test.tsx  FindReplaceBar.tsx  FontSizeField.tsx  FormatToolbar.tsx  GlobalSearch.tsx  HistoryPanel.test.tsx  HistoryPanel.tsx  MarkdownPreview.test.tsx  MarkdownPreview.tsx  MermaidBlock.tsx  Minimap.test.tsx  Minimap.tsx  Modal.tsx  ModeToggle.tsx  PreviewFindBar.tsx  Select.tsx  SettingsControls.test.tsx  SettingsJsonEditor.tsx  SettingsMenu.tsx  SettingsModal.tsx  ShortcutCheatsheet.tsx  SlashMenu.tsx  SplitDivider.test.tsx  SplitDivider.tsx  StatsDialog.tsx  StatusBar.tsx  TabBar.tsx  TabContextMenu.tsx  (+8 more)
src/context/: ThemeContext.test.tsx  ThemeContext.tsx
src/hooks/: useAutosave.test.ts  useAutosave.ts  useDebouncedValue.ts  useDropdownKeyboard.ts  useExternalChangeWatcher.test.ts  useExternalChangeWatcher.ts  useFullscreen.ts  useGlobalShortcuts.test.tsx  useGlobalShortcuts.ts  useModals.ts  usePaletteCommands.ts  usePersistedState.test.ts  usePersistedState.ts  useScrollSync.ts  useToast.ts
src/security/: csp.test.ts  xssSanitize.test.tsx
src/settings/: SettingsProvider.tsx  jsonSupport.test.ts  jsonSupport.ts  provider.test.tsx  schema.test.ts  schema.ts  setterStability.test.tsx  store.test.ts  store.ts
src/test/: codemirrorDom.ts  providers.tsx  setup.ts
src/themes/: builtin.ts  contrast.test.ts  contrast.ts  editorTokens.test.ts  highlight.ts  index.ts  parity.test.tsx  themes.test.ts  tokenUsage.test.ts  types.ts  userThemes.test.ts  userThemes.ts
src/utils/: aiAssist.test.ts  aiAssist.ts  aiChat.test.ts  aiChat.ts  aiProviders.test.ts  aiProviders.ts  aiTransport.test.ts  aiTransport.ts  appVersion.ts  appWindow.test.ts  appWindow.ts  appearanceOptions.test.ts  appearanceOptions.ts  boot.test.ts  boot.ts  bundleIntegrity.test.ts  documentStats.test.ts  documentStats.ts  editorActions.test.ts  editorActions.ts  errors.ts  exportUtils.test.ts  exportUtils.ts  findReplace.test.ts  findReplace.ts  focusTrap.test.ts  focusTrap.ts  frontmatter.test.ts  frontmatter.ts  history.test.ts  history.ts  imageUtils.ts  menuActions.test.ts  menuActions.ts  persistence.test.ts  persistence.ts  readerWidth.ts  remarkCustomHeadingId.ts  remarkSupersub.ts  resolveRelativePath.test.ts  (+17 more)
